--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h2>Hello World! This is a template</h2>
-    <p>Trying to understand it, right now</p>
-</body>
-</html>
+{{define "content"}}
+<p>Hello World! This is a template</p>
+<strong>Trying to understand it, right now</strong>
+{{end}}
+test
