--- a/views/login.html
+++ b/views/login.html
@@ -1,4 +1,10 @@
 {{define "content"}}
+
+<h5>Login</h5>
+
+{{if .Error}}
+<div class="alert alert-danger" role="alert">{{.Error}}</div>
+{{end}}
 <form action="">
     <input type="text" name="username" placeholder="username" />
     <input type="password" name="password" placeholder="password" />
