--- a/views/register.html
+++ b/views/register.html
@@ -5,7 +5,7 @@
 {{if .Error}}
 <div class="alert alert-danger" role="alert">{{.Error}}</div>
 {{end}}
-<form action="">
+<form action="/register" method="post">
     <input type="text" name="username" placeholder="username" />
     <input type="password" name="password" placeholder="password" />
     <input type="submit" />
