--- a/views/templates/layouts/base.html
+++ b/views/templates/layouts/base.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>na me dey</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Login | Welcome Back</title>
 </head>
-
-<body>
-    <header>
-        <h1>My Web App</h1>
-    </header>
-    <main>
+<body class="bg-gradient-to-br from-blue-200 to-blue-400 min-h-screen flex items-center justify-center p-4">
         {{template "content" .}}
-    </main>
-    {{template "footer" }}
 </body>
 
 </html>
