--- a/views/login.html
+++ b/views/login.html
@@ -15,12 +15,12 @@
 
     <form action="/login" method="POST" class="space-y-5">
         <div>
-            <input type="email" placeholder="Email Address"
+            <input type="email" placeholder="Email Address" name="email"
                    class="w-full px-6 py-4 rounded-2xl bg-white border border-transparent focus:outline-none focus:ring-2 focus:ring-blue-400 transition-all shadow-sm">
         </div>
 
         <div>
-            <input type="password" placeholder="Password"
+            <input type="password" placeholder="Password" name="password"
                    class="w-full px-6 py-4 rounded-2xl bg-white border border-transparent focus:outline-none focus:ring-2 focus:ring-blue-400 transition-all shadow-sm">
         </div>
 
