--- a/views/login.html
+++ b/views/login.html
@@ -9,20 +9,19 @@
     {{with .Form }}
     {{with .Error.Get "generic" }}
     <div class="flex justify-center text-red-600">
-        {{ .generic }}
+        {{ . }}
     </div>
     {{ end }}
-
-
-    {{if .Error}}
-    <p>
-        {{.Error}}
-    </p>
+    {{with .Error.Get "email" }}
+    <p class="text-red-600">{{ . }}</p>
+    {{end}}
+    {{with .Error.Get "password" }}
+    <p class="text-red-600">{{ . }}</p>
     {{end}}
     {{ end }}
     <form action="/login" method="POST" class="space-y-5">
         <div>
-            <input type="email" placeholder="Email Address" name="email" value="">
+            <input type="email" placeholder="Email Address" name="email" value="{{ .Form.Email }}" required
                    class="w-full px-6 py-4 rounded-2xl bg-white border border-transparent focus:outline-none focus:ring-2 focus:ring-blue-400 transition-all shadow-sm">
         </div>
 
