--- a/views/login.html
+++ b/views/login.html
@@ -6,6 +6,12 @@
         <p class="text-slate-600">Sign in to your account</p>
     </div>
 
+    {{with .FlashMessage}}
+    <div class="mb-4 p-3 bg-green-100 text-green-700 rounded-xl text-center text-sm">
+        {{.}}
+    </div>
+    {{end}}
+
     {{with .Form }}
     {{with .Error.Get "generic" }}
     <div class="flex justify-center text-red-600">
@@ -64,7 +70,7 @@
 
     <p class="text-center text-slate-600 text-sm">
         Don't have an account?
-        <a href="#" class="text-blue-600 font-bold hover:underline">Sign up</a>
+        <a href="/register" class="text-blue-600 font-bold hover:underline">Sign up</a>
     </p>
 </div>
 {{end}}
